Project02/jitfailure-dolfin_expression_b169b0f8b1e65e03aceff7239b04f0ac/error.log
/tmp/tmp6wrdgw2o/dolfin_expression_b169b0f8b1e65e03aceff7239b04f0ac.cpp: In member function ‘virtual void dolfin::dolfin_expression_b169b0f8b1e65e03aceff7239b04f0ac::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp6wrdgw2o/dolfin_expression_b169b0f8b1e65e03aceff7239b04f0ac.cpp:65:58: error: ‘W’ was not declared in this scope
           values[1] = (x[0]>a && x[0]<(L-a) && near(x[1],W)) ? F/(H*(L-2*a)) : 0.0;
                                                          ^
/tmp/tmp6wrdgw2o/dolfin_expression_b169b0f8b1e65e03aceff7239b04f0ac.cpp:65:67: error: ‘H’ was not declared in this scope
           values[1] = (x[0]>a && x[0]<(L-a) && near(x[1],W)) ? F/(H*(L-2*a)) : 0.0;
                                                                   ^
/tmp/tmp6wrdgw2o/dolfin_expression_b169b0f8b1e65e03aceff7239b04f0ac.cpp: In member function ‘virtual double dolfin::dolfin_expression_b169b0f8b1e65e03aceff7239b04f0ac::get_property(std::__cxx11::string) const’:
/tmp/tmp6wrdgw2o/dolfin_expression_b169b0f8b1e65e03aceff7239b04f0ac.cpp:78:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "L") return L;          if (name == "a") return a;          if (name == "F") return F;
           ^~
/tmp/tmp6wrdgw2o/dolfin_expression_b169b0f8b1e65e03aceff7239b04f0ac.cpp:78:47: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "L") return L;          if (name == "a") return a;          if (name == "F") return F;
                                               ^~
